# photo

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
.cursor/hooks/state/: continual-learning.json
assets/lensfun/: sample-lenses.xml
assets/shaders/: blur.wgsl  image.wgsl
docs/: ARCHITECTURE.md  README.md  devlog-detailed.md  devlog-summary.md
docs/architecture/: ARCHITECTURE.md  decisions.md  drift-log.md
docs/debugging/: 2026-04-20-detail-load-latency.md  2026-04-20-detail-open-uniform-layout-crash.md  2026-04-20-detail-view-click-pan.md  2026-04-20-library-grid-resize.md  2026-04-20-release-click-crash.md  2026-04-20-stale-detail-state-crash.md  2026-04-22-detail-dimensions.md  2026-04-23-detail-drag-preview-overlay.md  2026-04-23-detail-reopen-latency.md  2026-04-23-detail-status-resolution.md  2026-04-23-library-thumbnail-aspect-ratio.md  template.md
docs/devlog/: summary.md
docs/devlog/detailed/: 2026-03-29_2026-04-04.md  2026-04-19_2026-04-19.md  2026-04-20_2026-04-20.md  2026-04-21_2026-04-21.md  2026-04-21_2026-04-22.md  2026-04-23_2026-04-23.md  2026-04-24_2026-04-24.md
docs/learning/: lessons.md
docs/reviews/: README.md
docs/superpowers/plans/: 2026-03-30-image-editing.md  2026-04-03-collections.md
docs/superpowers/specs/: 2026-03-30-image-editing-design.md  2026-04-03-collections-design.md
src/: collection.rs  decode.rs  edit.rs  lens.rs  main.rs  nav.rs  viewer.rs
