[package]
name = "photo"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13", features = ["tokio", "advanced"] }
image = { version = "0.24", default-features = false, features = [
    "jpeg", "png", "gif", "bmp", "tiff", "webp", "ico", "tga", "qoi", "hdr", "exr",
] }
resvg = "0.44"
rfd = "0.15"
tokio = { version = "1", features = ["rt-multi-thread"] }
bytemuck = { version = "1", features = ["derive"] }
natord = "1.0"
env_logger = "0.11"
log = "0.4"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
